force-app/main/default/objects/Campaign_Slab__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Slabs</relationshipLabel>
    <relationshipName>Campaign_Slabs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>