force-app/main/default/objects/Campaign_Slab__c/fields/Comm_Type__c.field-meta.xml
<CustomField>
    <fullName>Comm_Type__c</fullName>
    <label>Commission Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity Based</fullName>
            </value>
            <value>
                <fullName>Revenue Based</fullName>
            </value>
            <value>
                <fullName>Quantity Instant Payout</fullName>
            </value>
            <value>
                <fullName>Revenue Instant Payout</fullName>
            </value>
            <value>
                <fullName>Quantity or Revenue Instant Payout</fullName>
            </value>
            <value>
                <fullName>Graded Instant Payout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>