force-app/main/default/objects/Campaign_Slab__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <formula>Text(Campaign__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Type</label>
    <type>Text</type>
</CustomField>