force-app/main/default/objects/Campaign_Slab__c/fields/Is_Last_Slab__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Slab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Slab</label>
    <type>Checkbox</type>
</CustomField>