force-app/main/default/objects/Campaign_Slab__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <formula>End_Index__c -  Start_Index__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>