force-app/main/default/objects/Campaign_Slab__c/fields/Start_Index__c.field-meta.xml
<CustomField>
    <fullName>Start_Index__c</fullName>
    <label>Start Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>